--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -3,12 +3,183 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f5f5f5"
+    android:orientation="vertical"
+
     >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="50dp"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center|bottom"
+            >
+
+            <TextView
+                android:id="@+id/login_maintitle"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center|bottom"
+                android:text="21Line"
+                android:textSize="50dp"
+                android:textColor="#FF9242"
+                android:textStyle="bold|italic"
+                android:letterSpacing="0.1"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:gravity="center|top"
+            >
+            <TextView
+            android:id="@+id/login_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="종합입찰정보시스템"
+            android:textColor="@color/textColor_deep"
+                android:textSize="15dp"
+            android:letterSpacing="0.4"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
+    <EditText
+        android:id="@+id/et_id_Login"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="ID"
+        android:paddingLeft="10dp"
+        android:textSize="12dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/bgr_loginbox"
         />
 
+    <EditText
+        android:id="@+id/et_pw_Login"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:hint="Password"
+        android:paddingLeft="10dp"
+        android:textSize="12dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/bgr_loginbox"
+        />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="회원 가입"
+            android:layout_alignParentLeft="true"
+            android:textSize="11dp"
+            android:textColor="@color/textColor_deep"
+            />
+        <TextView
+            android:id="@+id/tv_clickToJoin_Login"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Click here"
+            android:layout_alignParentRight="true"
+            android:textColor="#cc5e93"
+            android:textSize="12dp"
+            />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="ID·PW 분실"
+            android:textSize="11dp"
+            android:layout_alignParentLeft="true"
+            android:textColor="@color/textColor_deep"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="Click here"
+            android:textColor="#cc5e93"
+            android:textSize="12dp"
+            android:layout_alignParentRight="true"
+            />
+    </RelativeLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/bgr_bigbtn"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="로그인"
+        android:textColor="#ffffff"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="21LINE ⓒorporation"
+        android:gravity="center|bottom"
+        android:paddingBottom="10dp"
+        android:textSize="11dp"
+        android:textColor="@color/textColor_soft"
+        />
+
+
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
