--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#FF9242</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="textColor_deep">#505050</color>
+    <color name="textColor_soft">#777777</color>
+    <color name="textColor_unclicked">#969696</color>
+    <color name="textColor_clicked">#FF9242</color>
+
+
+
+
+
 </resources>
