SMS 인증, 아이디 중복확인

--- a/app/src/main/res/layout/join_activity_second.xml
+++ b/app/src/main/res/layout/join_activity_second.xml
@@ -127,6 +127,7 @@
                 />
 
             <EditText
+                android:id="@+id/et_memID_joinsecond"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.72"
@@ -142,6 +143,7 @@
                 android:layout_weight="0.03"/>
 
             <Button
+                android:id="@+id/btn_checkMemID_joinsecond"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.25"
@@ -179,6 +181,7 @@
                 />
 
             <EditText
+                android:id="@+id/et_password_joinsecond"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -216,6 +219,7 @@
                 />
 
             <EditText
+                android:id="@+id/et_passwordComp_joinsecond"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
