--- a/app/src/main/res/layout/join_activity_first.xml
+++ b/app/src/main/res/layout/join_activity_first.xml
@@ -68,6 +68,7 @@
             >
 
             <EditText
+                android:id="@+id/et_celPhoneNum_joinfirst"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -80,6 +81,7 @@
 
 
             <Button
+                android:id="@+id/btn_checkCel_joinfirst"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.25"
@@ -106,6 +108,7 @@
             >
 
             <EditText
+                android:id="@+id/et_certNum_joinfirst"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -117,6 +120,7 @@
                 />
 
             <Button
+                android:id="@+id/btn_compChkCel_joinfirst"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="0.25"
