--- a/app/src/main/res/layout/join_companyuserll.xml
+++ b/app/src/main/res/layout/join_companyuserll.xml
@@ -58,6 +58,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_comName_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -90,6 +91,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_ceoName_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -122,6 +124,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_bizNo1_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -139,6 +142,7 @@
                     android:text="-"
                     />
                 <EditText
+                    android:id="@+id/et_bizNo2_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -156,6 +160,7 @@
                     android:text="-"
                     />
                 <EditText
+                    android:id="@+id/et_bizNo3_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -188,6 +193,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_txtSType_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -219,6 +225,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_txtSPart_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -250,6 +257,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_manName_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -282,6 +290,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_phone_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -314,6 +323,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_celPhoneNum_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -346,6 +356,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_faxNum_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -378,6 +389,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_homepage_joinCompany"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
