--- a/app/src/main/res/layout/join_orderuserll.xml
+++ b/app/src/main/res/layout/join_orderuserll.xml
@@ -58,6 +58,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_comName_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -90,6 +91,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_ceoName_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -122,6 +124,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_bizNo1_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -139,6 +142,7 @@
                     android:text="-"
                     />
                 <EditText
+                    android:id="@+id/et_bizNo2_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -156,6 +160,7 @@
                     android:text="-"
                     />
                 <EditText
+                    android:id="@+id/et_bizNo3_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -207,6 +212,7 @@
                         >
 
                 <TextView
+                    android:id="@+id/tv_addr1_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.72"
@@ -233,7 +239,8 @@
                     />
                     </LinearLayout>
 
-                    <TextView
+                    <EditText
+                        android:id="@+id/et_addr2_joinOrder"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_marginTop="5dp"
@@ -264,6 +271,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_txtSType_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -295,6 +303,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_txtSPart_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -327,6 +336,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_manName_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -359,6 +369,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_phone_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -391,6 +402,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_celPhoneNum_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -423,6 +435,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_faxNum_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
@@ -455,6 +468,7 @@
                     android:textStyle="bold" />
 
                 <EditText
+                    android:id="@+id/et_homepage_joinOrder"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="5dp"
