--- a/app/src/main/res/layout/join_joininfo_include.xml
+++ b/app/src/main/res/layout/join_joininfo_include.xml
@@ -56,7 +56,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_comName_joinOrder"
+                    android:id="@+id/et_comName_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -90,7 +90,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_ceoName_joinOrder"
+                    android:id="@+id/et_ceoName_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -124,7 +124,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_bizNo1_joinOrder"
+                    android:id="@+id/et_bizNo1_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -143,7 +143,7 @@
                     android:text="-"
                     />
                 <EditText
-                    android:id="@+id/et_bizNo2_joinOrder"
+                    android:id="@+id/et_bizNo2_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -162,7 +162,7 @@
                     android:text="-"
                     />
                 <EditText
-                    android:id="@+id/et_bizNo3_joinOrder"
+                    android:id="@+id/et_bizNo3_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -216,7 +216,7 @@
                         >
 
                 <TextView
-                    android:id="@+id/tv_addr1_joinOrder"
+                    android:id="@+id/tv_addr1_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="0.72"
@@ -245,7 +245,7 @@
                     </LinearLayout>
 
                     <EditText
-                        android:id="@+id/et_addr2_joinOrder"
+                        android:id="@+id/et_addr2_joinInfo"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_marginTop="@dimen/height_5dp"
@@ -277,7 +277,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_txtSType_joinOrder"
+                    android:id="@+id/et_txtSType_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -310,7 +310,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_txtSPart_joinOrder"
+                    android:id="@+id/et_txtSPart_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -411,7 +411,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_manName_joinOrder"
+                    android:id="@+id/et_manName_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -444,7 +444,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_phone_joinOrder"
+                    android:id="@+id/et_phone_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -478,7 +478,7 @@
 
                 <EditText
                     android:inputType="number"
-                    android:id="@+id/et_celPhoneNum_joinOrder"
+                    android:id="@+id/et_celPhoneNum_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -511,7 +511,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_faxNum_joinOrder"
+                    android:id="@+id/et_faxNum_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
@@ -545,7 +545,7 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/et_homepage_joinOrder"
+                    android:id="@+id/et_homepage_joinInfo"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/height_5dp"
