--- a/app/src/main/res/layout/join_privateinfo.xml
+++ b/app/src/main/res/layout/join_privateinfo.xml
@@ -86,6 +86,7 @@
             android:text="* 가입 약관을 살펴보시기 바랍니다."
             />
         <CheckBox
+            android:id="@+id/chb_clause"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_20dp"
             android:textSize="@dimen/txt_addition"
@@ -254,6 +255,7 @@
             android:text="* 개인정보의 수집·이용에 관한 사항에 동의하십니까?"
             />
         <CheckBox
+            android:id="@+id/chb_privateInfo"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_20dp"
             android:textSize="@dimen/txt_addition"
