--- a/app/src/main/res/layout/drawerlayout.xml
+++ b/app/src/main/res/layout/drawerlayout.xml
@@ -47,6 +47,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/user_com_name_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
@@ -75,6 +76,7 @@
                         android:textStyle="bold"
                         />
                     <TextView
+                        android:id="@+id/service_due_date_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
@@ -84,6 +86,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/service_dday_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
@@ -95,6 +98,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/icon_view_user_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="조회"
@@ -106,9 +110,11 @@
                         android:textColor="#ffffff"
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
+                        android:visibility="gone"
                         />
 
                     <TextView
+                        android:id="@+id/icon_anal_user_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:text="분석"
@@ -121,12 +127,14 @@
                         android:paddingRight="5dp"
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
+                        android:visibility="gone"
                         />
 
                     <TextView
+                        android:id="@+id/icon_free_user_drawer"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="무료 회원"
+                        android:text="중지중"
                         android:layout_marginLeft="5dp"
                         android:gravity="center"
                         android:textSize="@dimen/txt_main"
@@ -136,6 +144,7 @@
                         android:background="@drawable/bgr_service_free"
                         android:layout_marginTop="3dp"
                         android:layout_marginBottom="3dp"
+                        android:visibility="gone"
                         />
 
                 </LinearLayout>
